--- a/src/Charri.MvvmCross.Plugins.Routing/packages.config
+++ b/src/Charri.MvvmCross.Plugins.Routing/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="JetBrains.Annotations" version="10.1.4" targetFramework="portable45-net45+win8+wpa81" />
-  <package id="MvvmCross" version="4.2.0" targetFramework="portable45-net45+win8+wpa81" />
-  <package id="MvvmCross.Binding" version="4.2.0" targetFramework="portable45-net45+win8+wpa81" />
-  <package id="MvvmCross.Core" version="4.2.0" targetFramework="portable45-net45+win8+wpa81" />
-  <package id="MvvmCross.Platform" version="4.2.0" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="JetBrains.Annotations" version="10.2.0" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="MvvmCross" version="4.3.0" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="MvvmCross.Binding" version="4.3.0" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="MvvmCross.Core" version="4.3.0" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="MvvmCross.Platform" version="4.3.0" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="System.Runtime" version="4.1.0" targetFramework="portable45-net45+win8+wpa81" />
 </packages>
